Price Rework. Add Vault Dependency. Add Effects for skills.